--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
+    {% load static %}
 	<!-- Meta Tag -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,37 +11,37 @@
 	<!-- Title Tag  -->
     <title>Eshop - eCommerce HTML5 Template.</title>
 	<!-- Favicon -->
-	<link rel="icon" type="image/png" href="images/favicon.png">
+	<link rel="icon" type="image/png" href="{% static 'template/images/favicon.png' %}">
 	<!-- Web Font -->
 	<link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
 	
 	<!-- StyleSheet -->
 	
 	<!-- Bootstrap -->
-	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="{% static 'template/css/bootstrap.css' %}">
 	<!-- Magnific Popup -->
-    <link rel="stylesheet" href="css/magnific-popup.min.css">
+    <link rel="stylesheet" href="{% static 'template/css/magnific-popup.min.css' %}">
 	<!-- Font Awesome -->
-    <link rel="stylesheet" href="css/font-awesome.css">
+    <link rel="stylesheet" href="{% static 'template/css/font-awesome.css' %}">
 	<!-- Fancybox -->
-	<link rel="stylesheet" href="css/jquery.fancybox.min.css">
+	<link rel="stylesheet" href="{% static 'template/css/jquery.fancybox.min.css' %}">
 	<!-- Themify Icons -->
-    <link rel="stylesheet" href="css/themify-icons.css">
+    <link rel="stylesheet" href="{% static 'template/css/themify-icons.css' %}">
 	<!-- Nice Select CSS -->
-    <link rel="stylesheet" href="css/niceselect.css">
+    <link rel="stylesheet" href="{% static 'template/css/niceselect.css' %}">
 	<!-- Animate CSS -->
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="{% static 'template/css/animate.css' %}">
 	<!-- Flex Slider CSS -->
-    <link rel="stylesheet" href="css/flex-slider.min.css">
+    <link rel="stylesheet" href="{% static 'template/css/flex-slider.min.css' %}">
 	<!-- Owl Carousel -->
-    <link rel="stylesheet" href="css/owl-carousel.css">
+    <link rel="stylesheet" href="{% static 'template/css/owl-carousel.css' %}">
 	<!-- Slicknav -->
-    <link rel="stylesheet" href="css/slicknav.min.css">
+    <link rel="stylesheet" href="{% static 'template/css/slicknav.min.css' %}">
 	
 	<!-- Eshop StyleSheet -->
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+	<link rel="stylesheet" href="{% static 'template/css/reset.css' %}">
+	<link rel="stylesheet" href="{% static 'template/style.css' %}">
+    <link rel="stylesheet" href="{% static 'template/css/responsive.css' %}">
 
 	
 	
@@ -96,7 +97,7 @@
 						<div class="col-lg-2 col-md-2 col-12">
 							<!-- Logo -->
 							<div class="logo">
-								<a href="index.html"><img src="images/logo.png" alt="logo"></a>
+								<a href="index.html"><img src="{% static 'template/images/logo.png' %}" alt="logo"></a>
 							</div>
 							<!--/ End Logo -->
 							<!-- Search Form -->
@@ -791,40 +792,40 @@
 		<!-- /End Footer Area -->
  
 	<!-- Jquery -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery-migrate-3.0.0.js"></script>
-	<script src="js/jquery-ui.min.js"></script>
+    <script src="{% static 'template/js/jquery.min.js' %}"></script>
+    <script src="{% static 'template/js/jquery-migrate-3.0.0.js' %}"></script>
+	<script src="{% static 'template/js/jquery-ui.min.js' %}"></script>
 	<!-- Popper JS -->
-	<script src="js/popper.min.js"></script>
+	<script src="{% static 'template/js/popper.min.js' %}"></script>
 	<!-- Bootstrap JS -->
-	<script src="js/bootstrap.min.js"></script>
+	<script src="{% static 'template/js/bootstrap.min.js' %}"></script>
 	<!-- Color JS -->
-	<script src="js/colors.js"></script>
+	<script src="{% static 'template/js/colors.js' %}"></script>
 	<!-- Slicknav JS -->
-	<script src="js/slicknav.min.js"></script>
+	<script src="{% static 'template/js/slicknav.min.js' %}"></script>
 	<!-- Owl Carousel JS -->
-	<script src="js/owl-carousel.js"></script>
+	<script src="{% static 'template/js/owl-carousel.js' %}"></script>
 	<!-- Magnific Popup JS -->
-	<script src="js/magnific-popup.js"></script>
+	<script src="{% static 'template/js/magnific-popup.js' %}"></script>
 	<!-- Fancybox JS -->
-	<script src="js/facnybox.min.js"></script>
+	<script src="{% static 'template/js/facnybox.min.js' %}"></script>
 	<!-- Waypoints JS -->
-	<script src="js/waypoints.min.js"></script>
+	<script src="{% static 'template/js/waypoints.min.js' %}"></script>
 	<!-- Countdown JS -->
-	<script src="js/finalcountdown.min.js"></script>
+	<script src="{% static 'template/js/finalcountdown.min.js' %}"></script>
 	<!-- Nice Select JS -->
-	<script src="js/nicesellect.js"></script>
+	<script src="{% static 'template/js/nicesellect.js' %}"></script>
 	<!-- Ytplayer JS -->
-	<script src="js/ytplayer.min.js"></script>
+	<script src="{% static 'template/js/ytplayer.min.js' %}"></script>
 	<!-- Flex Slider JS -->
-	<script src="js/flex-slider.js"></script>
+	<script src="{% static 'template/js/flex-slider.js' %}"></script>
 	<!-- ScrollUp JS -->
-	<script src="js/scrollup.js"></script>
+	<script src="{% static 'template/js/scrollup.js' %}"></script>
 	<!-- Onepage Nav JS -->
-	<script src="js/onepage-nav.min.js"></script>
+	<script src="{% static 'template/js/onepage-nav.min.js' %}"></script>
 	<!-- Easing JS -->
-	<script src="js/easing.js"></script>
+	<script src="{% static 'template/js/easing.js' %}"></script>
 	<!-- Active JS -->
-	<script src="js/active.js"></script>
+	<script src="{% static 'template/js/active.js' %}"></script>
 </body>
 </html>
