--- a/templates/index.html
+++ b/templates/index.html
@@ -42,12 +42,31 @@
 	<link rel="stylesheet" href="{% static 'template/css/reset.css' %}">
 	<link rel="stylesheet" href="{% static 'template/style.css' %}">
     <link rel="stylesheet" href="{% static 'template/css/responsive.css' %}">
-
+    <script src="{% static 'js/main.js' %}"></script>
 	
 	
 </head>
 <body class="js">
-	
+
+<script>
+    function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+
+    const csrftoken = getCookie('csrftoken');
+</script>
 	<!-- Preloader -->
 	<div class="preloader">
 		<div class="preloader-inner">
@@ -82,7 +101,7 @@
 							<ul class="list-main">
 								<li><i class="ti-location-pin"></i> Store location</li>
 								<li><i class="ti-alarm-clock"></i> <a href="#">Daily deal</a></li>
-								<li><i class="ti-user"></i> <a href="#">My account</a></li>
+								<li><i class="ti-user"></i> <a href="#">{{ request.user.username }}</a></li>
 								<li><i class="ti-power-off"></i><a href="login.html#">Login</a></li>
 							</ul>
 						</div>
@@ -142,31 +161,31 @@
 								<a href="#" class="single-icon"><i class="fa fa-user-circle-o" aria-hidden="true"></i></a>
 							</div>
 							<div class="sinlge-bar shopping">
-								<a href="#" class="single-icon"><i class="ti-bag"></i> <span class="total-count">2</span></a>
+								<a href="{% url 'cart' %}" class="single-icon">
+                                    <i class="ti-bag"></i>
+                                    <span class="total-count"> {{ soni }}
+                                    </span>
+                                </a>
 								<!-- Shopping Item -->
 								<div class="shopping-item">
 									<div class="dropdown-cart-header">
-										<span>2 Items</span>
+										<span>{{ soni }} mahsulot</span>
 										<a href="#">View Cart</a>
 									</div>
 									<ul class="shopping-list">
-										<li>
+										{% for i in order_datails %}
+                                        <li>
 											<a href="#" class="remove" title="Remove this item"><i class="fa fa-remove"></i></a>
-											<a class="cart-img" href="#"><img src="https://via.placeholder.com/70x70" alt="#"></a>
-											<h4><a href="#">Woman Ring</a></h4>
-											<p class="quantity">1x - <span class="amount">$99.00</span></p>
+											<a class="cart-img" href="#"><img src="{{ i.product.image.url }}" alt="#"></a>
+											<h4><a href="#">{{ i.product.name }}</a></h4>
+											<p class="quantity">{{ i.quantity }}x - <span class="amount">${{ i.real_price }}</span></p>
 										</li>
-										<li>
-											<a href="#" class="remove" title="Remove this item"><i class="fa fa-remove"></i></a>
-											<a class="cart-img" href="#"><img src="https://via.placeholder.com/70x70" alt="#"></a>
-											<h4><a href="#">Woman Necklace</a></h4>
-											<p class="quantity">1x - <span class="amount">$35.00</span></p>
-										</li>
+                                        {% endfor %}
 									</ul>
 									<div class="bottom">
 										<div class="total">
 											<span>Total</span>
-											<span class="total-amount">$134.00</span>
+											<span class="total-amount">${{ total_price }}</span>
 										</div>
 										<a href="checkout.html" class="btn animate">Checkout</a>
 									</div>
@@ -263,7 +282,7 @@
 													<li><a href="#">Service</a></li>
 													<li><a href="#">Shop<i class="ti-angle-down"></i><span class="new">New</span></a>
 														<ul class="dropdown">
-															<li><a href="cart.html">Cart</a></li>
+															<li><a href="{% url 'cart' %}">Cart</a></li>
 															<li><a href="checkout.html">Checkout</a></li>
 														</ul>
 													</li>
@@ -379,7 +398,7 @@
 								<!-- Tab Nav -->
 								<ul class="nav nav-tabs" id="myTab" role="tablist">
                                     {% for i in category %}
-									<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#" role="tab">{{ i.name }}</a></li>
+									<li class="nav-item"><a onclick="render_category({{ i.id }})" class="nav-link" data-toggle="tab" href="#" role="tab">{{ i.name }}</a></li>
 								    {% endfor %}
                                 </ul>
 								<!--/ End Tab Nav -->
@@ -387,12 +406,12 @@
                         <div class="tab-content" id="myTabContent">
                             <div class="tab-pane fade show active" id="man" role="tabpanel">
 									<div class="tab-single">
-										<div class="row">
+										<div class="row" id="category-product">
                                             {% for i in products %}
 											<div class="col-xl-3 col-lg-4 col-md-4 col-12">
 												<div class="single-product">
 													<div class="product-img">
-														<a href="product-details.html">
+														<a href="/product/{{ i.id }}">
 															<img class="default-img" src="{{ i.image.url }}" alt="#">
 															<img class="hover-img" src="{{ i.image.url }}" alt="#">
 														</a>
@@ -402,15 +421,18 @@
 																<a title="Wishlist" href=""><i class=" ti-heart "></i><span>Add to Wishlist</span></a>
 																<a title="Compare" href=""><i class="ti-bar-chart-alt"></i><span>Add to Compare</span></a>
 															</div>
-															<div data-product_id='2' data-price='29'  class="product-action-2">
-																<a title="Add to cart" >Add to cart</a>
+															<div onclick="addtocart({{ i.id }})" data-product_id='2' data-price='29'  class="product-action-2">
+																<a  title="Add to cart" >Add to cart</a>
 															</div>
 														</div>
 													</div>
 													<div class="product-content">
-														<h3><a href="product-details.html">{{ i.name }}</a></h3>
+														<h3><a href="{% url 'prdetail' i.id %}">{{ i.name }}</a></h3>
 														<div class="product-price">
-															<span>${{ i.price }}</span>
+															<span class="old">${{ i.price }}</span>
+														</div>
+														<div class="product-price">
+															<span>${{ i.real_price }}</span>
 														</div>
 													</div>
 												</div>
@@ -474,6 +496,7 @@
                 <div class="col-12">
                     <div class="owl-carousel popular-slider">
 						<!-- Start Single Product -->
+                        {% for i in products %}
 						<div class="single-product">
 							<div class="product-img">
 								<a href="product-details.html">
@@ -500,85 +523,7 @@
 								</div>
 							</div>
 						</div>
-						<!-- End Single Product -->
-						<!-- Start Single Product -->
-						<div class="single-product">
-                            <div class="product-img">
-                                <a href="product-details.html">
-                                    <img class="default-img" src="https://via.placeholder.com/550x750" alt="#">
-                                    <img class="hover-img" src="https://via.placeholder.com/550x750" alt="#">
-                                </a>
-								<div class="button-head">
-									<div data-product_id = '19' data-price = '240' class="product-action">
-										<a data-toggle="modal" data-target="#exampleModal" title="Quick View" href="#"><i class=" ti-eye"></i><span>Quick Shop</span></a>
-										<a title="Wishlist" ><i class=" ti-heart "></i><span>Add to Wishlist</span></a>
-										<a title="Compare" ><i class="ti-bar-chart-alt"></i><span>Add to Compare</span></a>
-									</div>
-									<div class="product-action-2">
-										<a title="Add to cart">Add to cart</a>
-									</div>
-								</div>
-                            </div>
-                            <div class="product-content">
-                                <h3><a href="product-details.html">Women Hot Collection</a></h3>
-                                <div class="product-price">
-                                    <span>$50.00</span>
-                                </div>
-                            </div>
-                        </div>
-						<!-- End Single Product -->
-						<!-- Start Single Product -->
-						<div class="single-product">
-                            <div class="product-img">
-                                <a href="product-details.html">
-                                    <img class="default-img" src="https://via.placeholder.com/550x750" alt="#">
-                                    <img class="hover-img" src="https://via.placeholder.com/550x750" alt="#">
-									<span class="new">New</span>
-                                </a>
-								<div class="button-head">
-									<div class="product-action">
-										<a data-toggle="modal" data-target="#exampleModal" title="Quick View" href="#"><i class=" ti-eye"></i><span>Quick Shop</span></a>
-										<a title="Wishlist" href="#"><i class=" ti-heart "></i><span>Add to Wishlist</span></a>
-										<a title="Compare" href="#"><i class="ti-bar-chart-alt"></i><span>Add to Compare</span></a>
-									</div>
-									<div class="product-action-2">
-										<a title="Add to cart" href="#">Add to cart</a>
-									</div>
-								</div>
-                            </div>
-                            <div class="product-content">
-                                <h3><a href="product-details.html">Awesome Pink Show</a></h3>
-                                <div class="product-price">
-                                    <span>$50.00</span>
-                                </div>
-                            </div>
-                        </div>
-						<!-- End Single Product -->
-						<!-- Start Single Product -->
-						<div class="single-product">
-                            <div class="product-img">
-                                <a href="product-details.html">
-                                    <img class="default-img" src="https://via.placeholder.com/550x750" alt="#">
-                                    <img class="hover-img" src="https://via.placeholder.com/550x750" alt="#">
-                                </a>
-								<div class="button-head">
-									<div class="product-action">
-										<a data-toggle="modal" data-target="#exampleModal" title="Quick View" href="#"><i class=" ti-eye"></i><span>Quick Shop</span></a>
-										<a title="Wishlist" href="#"><i class=" ti-heart "></i><span>Add to Wishlist</span></a>
-										<a title="Compare" href="#"><i class="ti-bar-chart-alt"></i><span>Add to Compare</span></a>
-									</div>
-									<div class="product-action-2">
-										<a title="Add to cart" href="#">Add to cart</a>
-									</div>
-								</div>
-                            </div>
-                            <div class="product-content">
-                                <h3><a href="product-details.html">Awesome Bags Collection</a></h3>
-                                <div class="product-price">
-                                    <span>$50.00</span>
-                                </div>
-                            </div>
-                        </div>
+                        {% endfor %}
 						<!-- End Single Product -->
                     </div>
                 </div>
