serverga depploy qilishgacha tayyor

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -100,7 +100,7 @@
                     <div class="right-content">
                         <ul class="list-main">
                             <li><i class="ti-location-pin"></i> Store location</li>
-                            <li><i class="ti-alarm-clock"></i> <a href="#">Daily deal</a></li>
+                            <li><i class="ti-alarm-clock"></i> <a href="{% url 'cart' %}">Daily deal</a></li>
                             <li><i class="ti-user"></i> <a href="#">My account</a></li>
                             <li><i class="ti-power-off"></i><a href="login.html#">Login</a></li>
                         </ul>
@@ -190,7 +190,7 @@
                                         <span>Total</span>
                                         <span class="total-amount">$134.00</span>
                                     </div>
-                                    <a href="checkout.html" class="btn animate">Checkout</a>
+                                    <a href="{% url 'checkout' %}" class="btn animate">Checkout</a>
                                 </div>
                             </div>
                             <!--/ End Shopping Item -->
@@ -219,7 +219,7 @@
                                                     class="new">New</span></a>
                                                 <ul class="dropdown">
                                                     <li><a href="cart.html">Cart</a></li>
-                                                    <li><a href="checkout.html">Checkout</a></li>
+                                                    <li><a href="{% url 'checkout' %}">Checkout</a></li>
                                                 </ul>
                                             </li>
                                             <li><a href="#">Pages</a></li>
