--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -246,18 +246,19 @@
 							<h2>Make Your Checkout Here</h2>
 							<p>Please register in order to checkout more quickly</p>
 							<!-- Form -->
-							<form class="form" method="post" action="#">
+							<form class="form" method="post" action="">
+                                {% csrf_token %}
 								<div class="row">
 									<div class="col-lg-6 col-md-6 col-12">
 										<div class="form-group">
 											<label>First Name<span>*</span></label>
-											<input type="text" name="name" placeholder="" required="required">
+											<input type="text" name="first_name" placeholder="" required="required">
 										</div>
 									</div>
 									<div class="col-lg-6 col-md-6 col-12">
 										<div class="form-group">
 											<label>Last Name<span>*</span></label>
-											<input type="text" name="name" placeholder="" required="required">
+											<input type="text" name="last_name" placeholder="" required="required">
 										</div>
 									</div>
 									<div class="col-lg-6 col-md-6 col-12">
@@ -507,11 +508,11 @@
 												<option value="UG">Uganda</option>
 												<option value="UA">Ukraine</option>
 												<option value="AE">United Arab Emirates</option>
-												<option value="US" selected="selected">United Kingdom</option>
+												<option value="US">United Kingdom</option>
 												<option value="UY">Uruguay</option>
 												<option value="UM">U.S. Minor Outlying Islands</option>
 												<option value="VI">U.S. Virgin Islands</option>
-												<option value="UZ">Uzbekistan</option>
+												<option value="UZ" selected="selected">Uzbekistan</option>
 												<option value="VU">Vanuatu</option>
 												<option value="VA">Vatican City</option>
 												<option value="VE">Venezuela</option>
@@ -526,56 +527,48 @@
 									</div>
 									<div class="col-lg-6 col-md-6 col-12">
 										<div class="form-group">
-											<label>State / Divition<span>*</span></label>
-											<select name="state-province" id="state-province">
-												<option value="divition" selected="selected">New Yourk</option>
-												<option>Los Angeles</option>
-												<option>Chicago</option>
-												<option>Houston</option>
-												<option>San Diego</option>
-												<option>Dallas</option>
-												<option>Charlotte</option>
+											<label>Viloyat<span>*</span></label>
+											<select name="viloyat" id="state-province">
+												<option value="Toshkent" selected="selected">Toshkent</option>
+												<option value="Buxoro">Buxoro</option>
+												<option>Andijon</option>
+												<option>Xorazm</option>
+												<option>Samarqand</option>
+												<option>Navoiy</option>
+												<option>Nukus</option>
 											</select>
 										</div>
 									</div>
 									<div class="col-lg-6 col-md-6 col-12">
 										<div class="form-group">
 											<label>Address Line 1<span>*</span></label>
-											<input type="text" name="address" placeholder="" required="required">
+											<input type="text" name="address1" placeholder="" required="required">
 										</div>
 									</div>
 									<div class="col-lg-6 col-md-6 col-12">
 										<div class="form-group">
 											<label>Address Line 2<span>*</span></label>
-											<input type="text" name="address" placeholder="" required="required">
+											<input type="text" name="address2" placeholder="" required="required">
 										</div>
 									</div>
 									<div class="col-lg-6 col-md-6 col-12">
 										<div class="form-group">
 											<label>Postal Code<span>*</span></label>
-											<input type="text" name="post" placeholder="" required="required">
+											<input type="text" name="postal_code" placeholder="" required="required">
 										</div>
 									</div>
-									<div class="col-lg-6 col-md-6 col-12">
-										<div class="form-group">
-											<label>Company<span>*</span></label>
-											<select name="company_name" id="company">
-												<option value="company" selected="selected">Microsoft</option>
-												<option>Apple</option>
-												<option>Xaiomi</option>
-												<option>Huawer</option>
-												<option>Wpthemesgrid</option>
-												<option>Samsung</option>
-												<option>Motorola</option>
-											</select>
-										</div>
-									</div>
+
 									<div class="col-12">
 										<div class="form-group create-account">
 											<input id="cbox" type="checkbox">
 											<label>Create an account?</label>
 										</div>
 									</div>
+                                    <div>
+                                        <button type="submit">
+                                            Submit
+                                        </button>
+                                    </div>
 								</div>
 							</form>
 							<!--/ End Form -->
@@ -588,9 +581,9 @@
 								<h2>CART  TOTALS</h2>
 								<div class="content">
 									<ul>
-										<li>Sub Total<span>$330.00</span></li>
-										<li>(+) Shipping<span>$10.00</span></li>
-										<li class="last">Total<span>$340.00</span></li>
+										<li>Sub Total<span>{{ allsum }}</span></li>
+										<li>(+) Shipping<span>$0</span></li>
+										<li class="last">Total<span>{{ allsum }}</span></li>
 									</ul>
 								</div>
 							</div>
