--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -49,7 +49,7 @@
 								<span class="fa fa-star"></span>
 								<span class="fa fa-star"></span>
 							</div>
-							<span class="review-no">41 reviews</span>
+							<span class="review-no">{{ likes }} likes</span>
 						</div>
 						<p class="product-description">{{ product.description }}</p>
 						<h4 class="price">current price: <span>${{ product.real_price }}</span></h4>
@@ -62,7 +62,11 @@
 						</h5>
 						<div class="action">
 							<button class="add-to-cart btn btn-default" type="button">add to cart</button>
-							<button class="like btn btn-default" type="button"><span class="fa fa-heart"></span></button>
+                            {% if likestatus %}
+							<button class="like btn btn-default" type="button"><i class="fa fa-heart" style="font-size:25px;color:red"></i></button>
+                            {% else %}
+                                <button class="like btn btn-default" type="button"><span class="fa fa-heart"></span></button>
+                            {% endif %}
 						</div>
 					</div>
 				</div>
